fixed header styling issue where buttons were too close

--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+	background: rgba(228, 228, 228, 0.6);
 	line-height: 1;
 }
 ol, ul {
