--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -1,6 +1,7 @@
 .splash-div {
     display: grid;
-    margin-top: 100px;
+    margin-top: 95px;
+    background: white;
 }
 
 
@@ -42,7 +43,7 @@
 }
 
 .splash-footer {
-    background: rgba(228, 228, 228, 0.6);
+    // background: rgba(228, 228, 228, 0.6);
     width: 100%;
     height: 10vh;
 }
